--- a/arch/arm64/configs/boundary_android_defconfig
+++ b/arch/arm64/configs/boundary_android_defconfig
@@ -823,6 +823,7 @@ CONFIG_SND_SOC_SOF_IMX8M=m
 CONFIG_SND_SOC_SOF_IMX8ULP=m
 CONFIG_SND_SOC_AK4613=m
 CONFIG_SND_SOC_BT_SCO=y
+CONFIG_SND_SOC_WM8962=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_HIDRAW=y
