--- a/arch/arm64/configs/boundary_defconfig
+++ b/arch/arm64/configs/boundary_defconfig
@@ -152,11 +152,15 @@ CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 # CONFIG_BT_LE is not set
 CONFIG_BT_LEDS=y
+CONFIG_BT_HCIBTUSB=m
+CONFIG_BT_HCIBTUSB_MTK=y
 CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIUART_BCM=y
+CONFIG_BT_HCIUART_QCA=y
 CONFIG_BT_HCIVHCI=y
+CONFIG_BT_MTKSDIO=m
 CONFIG_CFG80211=m
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=m
@@ -251,13 +255,13 @@ CONFIG_IGBVF=y
 CONFIG_SKY2=y
 CONFIG_ENCX24J600=m
 CONFIG_LAN743X=m
+CONFIG_R8169=m
 CONFIG_SMC91X=y
 CONFIG_SMSC911X=y
 CONFIG_STMMAC_ETH=y
 CONFIG_FDDI=m
 CONFIG_MICREL_PHY=y
 CONFIG_AT803X_PHY=y
-CONFIG_REALTEK_PHY=m
 CONFIG_MDIO_BITBANG=y
 CONFIG_MDIO_BUS_MUX_MMIOREG=y
 CONFIG_USB_PEGASUS=m
@@ -271,7 +275,9 @@ CONFIG_USB_NET_SMSC95XX=m
 CONFIG_USB_NET_PLUSB=m
 CONFIG_USB_NET_MCS7830=m
 CONFIG_USB_NET_QMI_WWAN=m
+CONFIG_USB_NET_AQC111=m
 CONFIG_BRCMFMAC=m
+CONFIG_MT7921E=m
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_XEN_NETDEV_BACKEND=m
 CONFIG_IVSHMEM_NET=y
