LF-11391-5: arm64: dts: imx8mp: add hdmi-phandle for xcvr
add hdmi-phandle property for xcvr

Signed-off-by: Shengjiu Wang <shengjiu.wang@nxp.com>
Reviewed-by: Sandor Yu <sandor.yu@nxp.com>
Reviewed-by: Chancel Liu <chancel.liu@nxp.com>

--- a/arch/arm64/boot/dts/freescale/imx8mp.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mp.dtsi
@@ -1911,6 +1911,7 @@
 					dma-names = "rx", "tx";
 					resets = <&audio_blk_ctrl 0>;
 					power-domains = <&audiomix_pd>;
+					hdmi-phandle = <&hdmi>;
 					status = "disabled";
 				};
 			};
