--- a/arch/arm64/boot/dts/freescale/imx95-android.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx95-android.dtsi
@@ -37,6 +37,11 @@
 			compatible = "android,trusty-log-v1";
 		};
 	};
+
+	reset_ctrl {
+		compatible = "imx95,resetctrl";
+		status = "okay";
+	};
 };
 
 &lpuart5 {
