DPDK-4106 arm64: configs: imx_v8_defconfig: enable CONFIG_VHOST_NET
Add vhost_net module support so that DPDK virtio can be configured
on iMX95 platform.

Signed-off-by: Apeksha Gupta <apeksha.gupta@nxp.com>

--- a/arch/arm64/configs/imx_v8_defconfig
+++ b/arch/arm64/configs/imx_v8_defconfig
@@ -1161,3 +1161,5 @@ CONFIG_CORESIGHT_STM=m
 CONFIG_CORESIGHT_CPU_DEBUG=m
 CONFIG_CORESIGHT_CTI=m
 CONFIG_MEMTEST=y
+# virtualization
+CONFIG_VHOST_NET=m
