LF-11891 arm64: dts: imx95-19x19-evk: set reg_m2_pwr as the vin-supply of reg_pcie0
reg_m2_pwr controls the power of M.2 connector and reg_pcie0 controls
the power of the NXP Wi-Fi/BT radio, so it is better to set reg_m2_pwr
as the vin-supply of reg_pcie0 instead of using regulator-always-on
property.

Signed-off-by: Sherry Sun <sherry.sun@nxp.com>
Reviewed-by: Richard Zhu <hongxing.zhu@nxp.com>

--- a/arch/arm64/boot/dts/freescale/imx95-19x19-evk.dts
+++ b/arch/arm64/boot/dts/freescale/imx95-19x19-evk.dts
@@ -182,6 +182,7 @@
 		regulator-name = "PCIE_WLAN_EN";
 		regulator-min-microvolt = <3300000>;
 		regulator-max-microvolt = <3300000>;
+		vin-supply = <&reg_m2_pwr>;
 		gpio = <&i2c7_pcal6524 6 GPIO_ACTIVE_HIGH>;
 		enable-active-high;
 		regulator-always-on;
@@ -211,7 +212,6 @@
 		regulator-max-microvolt = <3300000>;
 		gpio = <&i2c7_pcal6524 20 GPIO_ACTIVE_HIGH>;
 		enable-active-high;
-		regulator-always-on;
 	};
 
 	reg_slot_pwr: regulator-slot-pwr {
