--- a/arch/arm64/boot/dts/freescale/imx95-android.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx95-android.dtsi
@@ -49,3 +49,15 @@
 &dpu {
 	trusty;
 };
+
+&{/reserved-memory/} {
+	secure_region: secure {
+		compatible = "imx-secure-ion-pool";
+		reg = <0x0 0xA3800000 0 0x10000000>;
+	};
+	secure_framebuffer_region {
+		compatible = "imx-secure-ion-pool";
+		reg = <0x0 0xA1000000 0 0x2800000>;
+	};
+
+};
