--- a/arch/arm64/configs/boundary_defconfig
+++ b/arch/arm64/configs/boundary_defconfig
@@ -716,6 +716,7 @@ CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_LRW=y
 CONFIG_CRYPTO_PCBC=m
 CONFIG_CRYPTO_CHACHA20POLY1305=y
+CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_ECHAINIV=y
