arm64: dts: mt83x0-tungsten-smarc: include mt320 power tables
Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/arch/arm64/boot/dts/mediatek/mt83x0-tungsten-smarc.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt83x0-tungsten-smarc.dtsi
@@ -669,6 +669,7 @@
 	vmmc-supply = <&sdio_fixed_3v3>;
 	vqmmc-supply = <&mt6359_vcn18_ldo_reg>; // VCN18_WIFI
 	mmc-pwrseq = <&wifi_pwrseq>;
+#include "mt7921-mt320-tables.dtsi"
 };
 
 &spi0 {
