--- a/arch/arm64/boot/dts/freescale/imx8ulp-nitrogen-som.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8ulp-nitrogen-som.dtsi
@@ -5,6 +5,7 @@
 #include <dt-bindings/input/linux-event-codes.h>
 #include <dt-bindings/input/ti-drv260x.h>
 #include "imx8ulp.dtsi"
+#include "imx8ulp-rpmsg.dtsi"
 
 &iomuxc1 {
 	pinctrl-names = "default";
@@ -111,22 +112,6 @@
 		regulator-max-microvolt = <5000000>;
 	};
 
-	rpmsg_keys: rpmsg-keys {
-		compatible = "fsl,rpmsg-keys";
-
-		volume-up {
-			label = "VolumeUp";
-			linux,code = <KEY_VOLUMEUP>;
-			rpmsg-key,wakeup;
-		};
-
-		volume-down {
-			label = "VolumeDown";
-			linux,code = <KEY_VOLUMEDOWN>;
-			rpmsg-key,wakeup;
-		};
-	};
-
 	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
@@ -137,6 +122,11 @@
 			reusable;
 			size = <0 0x28000000>;
 			linux,cma-default;
+		};
+
+		rsc_table: rsc-table@1fff8000{
+			reg = <0 0x1fff8000 0 0x1000>;
+			no-map;
 		};
 
 		dsp_reserved: dsp_reserved@8e000000 {
@@ -171,17 +161,38 @@
 			no-map;
 		};
 
-		audio_reserved: audio@a8500000 {
-			compatible = "shared-dma-pool";
+		vdev0vring0: vdev0vring0@aff00000 {
+			reg = <0 0xaff00000 0 0x8000>;
 			no-map;
-			reg = <0 0xa8500000 0 0x100000>;
+		};
+
+		vdev0vring1: vdev0vring1@aff08000 {
+			reg = <0 0xaff08000 0 0x8000>;
+			no-map;
+		};
+
+		vdev1vring0: vdev1vring0@aff10000 {
+			reg = <0 0xaff10000 0 0x8000>;
+			no-map;
+		};
+
+		vdev1vring1: vdev1vring1@aff18000 {
+			reg = <0 0xaff18000 0 0x8000>;
+			no-map;
+		};
+
+		vdevbuffer: vdevbuffer@a8400000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0xa8400000 0 0x100000>;
+			no-map;
+		};
+
+		m33_reserved: m33_noncacheable_section@a8600000 {
+			no-map;
+			reg = <0 0xa8600000 0 0x1000000>;
 		};
 	};
 
-};
-
-&crypto {
-	status = "disabled";
 };
 
 &dsp {
@@ -194,6 +205,30 @@
 
 &ele_mu {
 	memory-region = <&ele_reserved>;
+};
+
+&i2c_rpbus_0 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	status = "okay";
+};
+
+&i2c_rpbus_1 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	status = "okay";
+};
+
+&imx8ulp_cm33 {
+	ipc-only;
+	rsc-da=<0x1fff8000>;
+	mbox-names = "tx", "rx", "rxdb";
+	mboxes = <&mu 0 1
+			&mu 1 1
+			&mu 3 1>;
+	memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>,
+			<&vdev1vring0>, <&vdev1vring1>, <&rsc_table>;
+	status = "okay";
 };
 
 &lpi2c5 {
@@ -263,6 +298,10 @@
 
 &mu3 {
 	status = "okay";
+};
+
+&rpmsg_sensor {
+	status = "disabled";
 };
 
 &usbmisc1 {
