arm64: boundary_defconfig: add missing rpmsg modules
Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/arch/arm64/configs/boundary_defconfig
+++ b/arch/arm64/configs/boundary_defconfig
@@ -273,6 +273,7 @@ CONFIG_XEN_NETDEV_BACKEND=m
 CONFIG_IVSHMEM_NET=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_KEYBOARD_RPMSG=m
 CONFIG_KEYBOARD_SNVS_PWRKEY=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=m
@@ -329,6 +330,7 @@ CONFIG_PINCTRL_IMX8ULP=y
 CONFIG_PINCTRL_IMX93=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_DWAPB=y
+CONFIG_GPIO_IMX_RPMSG=y
 CONFIG_GPIO_MXC=y
 CONFIG_GPIO_PL061=y
 CONFIG_GPIO_XGENE=y
@@ -580,6 +582,7 @@ CONFIG_RTC_DRV_DS3232=y
 CONFIG_RTC_DRV_EFI=y
 CONFIG_RTC_DRV_PL031=y
 CONFIG_RTC_DRV_SNVS=y
+CONFIG_RTC_DRV_IMX_RPMSG=m
 CONFIG_DMADEVICES=y
 CONFIG_FSL_EDMA_V3=y
 CONFIG_IMX_SDMA=y
@@ -617,6 +620,8 @@ CONFIG_ARM_SMMU=y
 CONFIG_ARM_SMMU_V3=y
 CONFIG_REMOTEPROC=y
 CONFIG_IMX_REMOTEPROC=y
+CONFIG_RPMSG_CHAR=m
+CONFIG_RPMSG_CTRL=m
 CONFIG_SOUNDWIRE=m
 CONFIG_SOC_BRCMSTB=y
 CONFIG_FSL_QIXIS=y
@@ -631,6 +636,7 @@ CONFIG_TI_ADS7924=m
 CONFIG_PWM=y
 CONFIG_PWM_IMX27=y
 CONFIG_PWM_IMX_TPM=y
+CONFIG_PWM_RPCHIP=m
 CONFIG_RESET_IMX7=y
 CONFIG_RESET_IMX8ULP_SIM=y
 CONFIG_PHY_XGENE=y
