arm64: dts: imx8ulp-nitrogen-som: fix order to match upstream
Signed-off-by: Gary Bisson <gary.bisson@boundarydevices.com>

--- a/arch/arm64/boot/dts/freescale/imx8ulp-nitrogen-som.dts
+++ b/arch/arm64/boot/dts/freescale/imx8ulp-nitrogen-som.dts
@@ -6,194 +6,6 @@
 /dts-v1/;
 
 #include "imx8ulp-nitrogen-som.dtsi"
-
-&iomuxc1 {
-	pinctrl_fec: fecgrp {
-		fsl,pins = <
-			MX8ULP_PAD_PTF8__ENET0_MDIO	0x43
-			MX8ULP_PAD_PTF9__ENET0_MDC	0x43
-			MX8ULP_PAD_PTF6__ENET0_CRS_DV	0x43
-			MX8ULP_PAD_PTF5__ENET0_RXER	0x43
-			MX8ULP_PAD_PTF1__ENET0_RXD0	0x43
-			MX8ULP_PAD_PTF0__ENET0_RXD1	0x43
-			MX8ULP_PAD_PTF4__ENET0_TXEN	0x43
-			MX8ULP_PAD_PTF3__ENET0_TXD0	0x43
-			MX8ULP_PAD_PTF2__ENET0_TXD1	0x43
-			MX8ULP_PAD_PTF7__ENET0_REFCLK	0x10043
-#define GP_FEC_RESET	<&gpiof 11 GPIO_ACTIVE_LOW>
-			MX8ULP_PAD_PTF11__PTF11		0x7
-#define GPIRQ_FEC_PHY	<&gpiof 10 IRQ_TYPE_LEVEL_LOW>
-			MX8ULP_PAD_PTF10__PTF10		0x7
-		>;
-	};
-
-	pinctrl_gpio_keys_j6b: gpio-keys-j6grp {
-		fsl,pins = <
-#define GPIO_KEYS_J6P17	<&gpiod 15 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD15__PTD15		0x7
-#define GPIO_KEYS_J6P19	<&gpiod 20 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD20__PTD20		0x7
-#define GPIO_KEYS_J6P21	<&gpioe 10 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE10__PTE10		0x7
-#define GPIO_KEYS_J6P23	<&gpiof 12 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF12__PTF12		0x7
-#define GPIO_KEYS_J6P27	<&gpiof 18 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF18__PTF18		0x7
-#define GPIO_KEYS_J6P29	<&gpiof 25 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF25__PTF25		0x7
-		>;
-	};
-
-	pinctrl_gpio_keys_m2: gpio-keys-xgrp {
-		fsl,pins = <
-#define GPIO_KEYS_J13	<&gpioe 2 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE2__PTE2		0x7
-#define GPIO_KEYS_J14	<&gpioe 4 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE4__PTE4		0x7
-#define GPIO_KEYS_J16	<&gpioe 12 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE12__PTE12		0x7
-#define GPIO_KEYS_J17	<&gpioe 16  GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE16__PTE16		0x7
-#define GPIO_KEYS_J18	<&gpioe 18 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE18__PTE18		0x7
-#define GPIO_KEYS_J19	<&gpiof 24 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF24__PTF24		0x7
-#define GPIO_KEYS_J20	<&gpioe 10 GPIO_ACTIVE_HIGH>
-#define GPIO_KEYS_J22	<&gpioe 14 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE14__PTE14		0x7
-		>;
-	};
-
-	pinctrl_gpio_leds_j6b: gpio-leds-j6grp {
-		fsl,pins = <
-#define GPIO_LEDS_J6P18	<&gpiod 18 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD18__PTD18		0x7
-#define GPIO_LEDS_J6P20	<&gpiod 23 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD23__PTD23		0x7
-#define GPIO_LEDS_J6P22	<&gpioe 23 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE23__PTE23		0x7
-#define GPIO_LEDS_J6P24	<&gpiof 13 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF13__PTF13		0x7
-#define GPIO_LEDS_J6P28	<&gpiof 19 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF19__PTF19		0x7
-#define GPIO_LEDS_J6P30	<&gpiod 19 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD19__PTD19		0x7
-		>;
-	};
-
-	pinctrl_gpio_leds_m2: gpio-leds-xgrp {
-		fsl,pins = <
-#define GPIO_LEDS_J13	<&gpioe 3 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE3__PTE3		0x7
-#define GPIO_LEDS_J14	<&gpioe 5 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE5__PTE5		0x7
-#define GPIO_LEDS_J16	<&gpioe 13 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE13__PTE13		0x7
-#define GPIO_LEDS_J17	<&gpioe 17 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE17__PTE17		0x7
-#define GPIO_LEDS_J18	<&gpioe 19 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE19__PTE19		0x7
-#define GPIO_LEDS_J19	<&gpiof 28 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF28__PTF28		0x7
-#define GPIO_LEDS_J20	<&gpioe 11 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE11__PTE11		0x7
-#define GPIO_LEDS_J22	<&gpioe 15 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE15__PTE15		0x7
-		>;
-	};
-
-	/* CSI i2c bus*/
-	pinctrl_lpi2c7: lpi2c7grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTF20__LPI2C7_SCL	0x27
-			MX8ULP_PAD_PTF21__LPI2C7_SDA	0x27
-			MX8ULP_PAD_PTD16__PTD16		0x7
-			MX8ULP_PAD_PTD17__PTD17		0x7
-		>;
-	};
-
-	/* J11, M.2 connector */
-	pinctrl_lpuart4: lpuart4grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTE18__LPUART4_TX	0x03
-			MX8ULP_PAD_PTE19__LPUART4_RX	0x03
-			MX8ULP_PAD_PTE16__LPUART4_CTS_B	0x03
-			MX8ULP_PAD_PTE17__LPUART4_RTS_B 0x03
-		>;
-	};
-
-	/* J9 connector */
-	pinctrl_lpuart7: lpuart7grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTF22__LPUART7_TX	0x03
-			MX8ULP_PAD_PTF23__LPUART7_RX	0x03
-		>;
-	};
-
-	pinctrl_sn65dsi83: sn65dsi83grp {
-		fsl,pins = <
-#define GP_SN65DSI83_EN	<&gpiof 26 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTF26__PTF26         0x02
-#define GPIRQ_SN65DSI83	<&gpioe 9 IRQ_TYPE_LEVEL_HIGH>
-			MX8ULP_PAD_PTE9__PTE9		0x7
-		>;
-	};
-
-	pinctrl_reg_usbotg1_vbus: reg-usbotg1-vbusgrp {
-		fsl,pins = <
-#define GP_REG_USB_OTG1_VBUS	<&gpiod 13 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD13__PTD13		0x03
-		>;
-	};
-
-	pinctrl_reg_usbotg2_vbus: reg-usbotg2-vbusgrp {
-		fsl,pins = <
-#define GP_REG_USB_OTG2_VBUS	<&gpiod 21 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTD21__PTD21		0x03
-		>;
-	};
-
-	pinctrl_tpm4: tpm4grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTE8__TPM4_CH0	0x7
-		>;
-	};
-
-	pinctrl_ts_goodix: ts-goodixgrp {
-		fsl,pins = <
-#define GPIRQ_TS	<&gpioe 22 IRQ_TYPE_LEVEL_HIGH>
-#define GP_TS_IRQ	<&gpioe 22 GPIO_ACTIVE_HIGH>
-			MX8ULP_PAD_PTE22__PTE22		0x03
-#define GP_TS_RESET	<&gpioe 7 GPIO_ACTIVE_LOW>
-			MX8ULP_PAD_PTE7__PTE7		0x02
-		>;
-	};
-
-	pinctrl_usbotg1: usbotg1grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTD14__USB0_OC	0x10003
-		>;
-	};
-
-	pinctrl_usbotg2: usbotg2grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTD22__USB1_OC	0x10003
-		>;
-	};
-
-	pinctrl_usdhc2: usdhc2grp {
-		fsl,pins = <
-			MX8ULP_PAD_PTE2__SDHC2_CLK	0x10042
-			MX8ULP_PAD_PTE3__SDHC2_CMD	0x43
-			MX8ULP_PAD_PTE1__SDHC2_D0	0x43
-			MX8ULP_PAD_PTE0__SDHC2_D1	0x43
-			MX8ULP_PAD_PTE5__SDHC2_D2	0x43
-			MX8ULP_PAD_PTE4__SDHC2_D3	0x43
-			MX8ULP_PAD_PTE12__SDHC2_RESET_B	0x43
-		>;
-	};
-};
-
 #include "../panel-m101nwwb.dtsi"
 
 / {
@@ -239,238 +51,6 @@
 		bootargs = "console=ttyLP3,115200 earlycon";
 	};
 
-	gpio-keys-j6b {
-		compatible = "gpio-keys";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_gpio_keys_j6b>;
-
-		J6P17 {
-			label = "J6P17";
-			gpios = GPIO_KEYS_J6P17;
-			linux,code = <KEY_I>;
-		};
-
-		J6P19 {
-			label = "J6P19";
-			gpios = GPIO_KEYS_J6P19;
-			linux,code = <KEY_J>;
-		};
-
-		J6P21 {
-			label = "J6P21";
-			gpios = GPIO_KEYS_J6P21;
-			linux,code = <KEY_K>;
-		};
-
-		J6P23 {
-			label = "J6P23";
-			gpios = GPIO_KEYS_J6P23;
-			linux,code = <KEY_L>;
-		};
-
-#ifdef GPIO_KEYS_J6P25
-		J6P25 {
-			label = "J6P25";
-			gpios = GPIO_KEYS_J6P25;
-			linux,code = <KEY_M>;
-		};
-#endif
-
-		J6P27 {
-			label = "J6P27";
-			gpios = GPIO_KEYS_J6P27;
-			linux,code = <KEY_N>;
-		};
-
-		J6P29 {
-			label = "J6P29";
-			gpios = GPIO_KEYS_J6P29;
-			linux,code = <KEY_O>;
-		};
-	};
-
-	gpio-keys-m2 {
-		compatible = "gpio-keys";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_gpio_keys_m2>;
-
-#ifdef GPIO_KEYS_J12
-		J12 {
-			label = "J12";
-			gpios = GPIO_KEYS_J12;
-			linux,code = <KEY_A>;
-		};
-#endif
-
-		J13 {
-			label = "J13";
-			gpios = GPIO_KEYS_J13;
-			linux,code = <KEY_B>;
-		};
-
-		J14 {
-			label = "J14";
-			gpios = GPIO_KEYS_J14;
-			linux,code = <KEY_C>;
-		};
-
-		J16 {
-			label = "J16";
-			gpios = GPIO_KEYS_J16;
-			linux,code = <KEY_D>;
-		};
-
-		J17 {
-			label = "J17";
-			gpios = GPIO_KEYS_J17;
-			linux,code = <KEY_E>;
-		};
-
-		J18 {
-			label = "J18";
-			gpios = GPIO_KEYS_J18;
-			linux,code = <KEY_F>;
-		};
-
-		J19 {
-			label = "J19";
-			gpios = GPIO_KEYS_J19;
-			linux,code = <KEY_G>;
-		};
-
-		J20 {
-			label = "J20";
-			gpios = GPIO_KEYS_J20;
-			linux,code = <KEY_H>;
-		};
-
-		J22 {
-			label = "J22";
-			gpios = GPIO_KEYS_J22;
-			linux,code = <KEY_I>;
-		};
-	};
-
-	gpio-leds-j6b {
-		compatible = "gpio-leds";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_gpio_leds_j6b>;
-
-#ifdef GPIO_LEDS_J6P16
-		J6P16 {
-			label = "J6P16";
-			gpios = GPIO_LEDS_J6P16;
-			default-state = "on";
-		};
-#endif
-
-		J6P18 {
-			label = "J6P18";
-			gpios = GPIO_LEDS_J6P18;
-			default-state = "on";
-		};
-
-		J6P20 {
-			label = "J6P20";
-			gpios = GPIO_LEDS_J6P20;
-			default-state = "on";
-		};
-
-		J6P22 {
-			label = "J6P22";
-			gpios = GPIO_LEDS_J6P22;
-			default-state = "on";
-		};
-
-		J6P24 {
-			label = "J6P24";
-			gpios = GPIO_LEDS_J6P24;
-			default-state = "on";
-		};
-
-#ifdef GPIO_LEDS_J6P26
-		J6P26 {
-			label = "J6P26";
-			gpios = GPIO_LEDS_J6P26;
-			default-state = "on";
-		};
-#endif
-
-		J6P28 {
-			label = "J6P28";
-			gpios = GPIO_LEDS_J6P28;
-			default-state = "on";
-		};
-
-		J6P30 {
-			label = "J6P30";
-			gpios = GPIO_LEDS_J6P30;
-			default-state = "on";
-		};
-	};
-
-	gpio-leds-m2 {
-		compatible = "gpio-leds";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_gpio_leds_m2>;
-
-#ifdef GPIO_LEDS_J12
-		J12 {
-			label = "J12";
-			gpios = GPIO_LEDS_J12;
-			default-state = "on";
-		};
-#endif
-
-		J13 {
-			label = "J13";
-			gpios = GPIO_LEDS_J13;
-			default-state = "on";
-		};
-
-		J14 {
-			label = "J14";
-			gpios = GPIO_LEDS_J14;
-			default-state = "on";
-		};
-
-		J16 {
-			label = "J16";
-			gpios = GPIO_LEDS_J16;
-			default-state = "on";
-		};
-
-		J17 {
-			label = "J17";
-			gpios = GPIO_LEDS_J17;
-			default-state = "on";
-		};
-
-		J18 {
-			label = "J18";
-			gpios = GPIO_LEDS_J18;
-			default-state = "on";
-		};
-
-		J19 {
-			label = "J19";
-			gpios = GPIO_LEDS_J19;
-			default-state = "on";
-		};
-
-		J20 {
-			label = "J20";
-			gpios = GPIO_LEDS_J20;
-			default-state = "on";
-		};
-
-		J22 {
-			label = "J22";
-			gpios = GPIO_LEDS_J22;
-			default-state = "on";
-		};
-	};
-
 	reg_usbotg1_vbus: regulator-usbotg1-vbus {
 		compatible = "regulator-fixed";
 		pinctrl-names = "default";
@@ -478,7 +58,7 @@
 		regulator-name = "usb_otg1_vbus";
 		regulator-min-microvolt = <5000000>;
 		regulator-max-microvolt = <5000000>;
-		gpio = GP_REG_USB_OTG1_VBUS;
+		gpio = <&gpiod 13 GPIO_ACTIVE_HIGH>;
 		enable-active-high;
 	};
 
@@ -489,7 +69,7 @@
 		regulator-name = "usb_otg2_vbus";
 		regulator-min-microvolt = <5000000>;
 		regulator-max-microvolt = <5000000>;
-		gpio = GP_REG_USB_OTG2_VBUS;
+		gpio = <&gpiod 21 GPIO_ACTIVE_HIGH>;
 		enable-active-high;
 	};
 };
@@ -552,8 +132,8 @@
 		mipi_to_lvds: mipi-to-lvds {
 			i2c-address = <0x2c>;
 			i2c-bus = <&lpi2c5>;
-			enable-gpios = GP_SN65DSI83_EN;
-			interrupts-extended = GPIRQ_SN65DSI83;
+			enable-gpios = <&gpiof 26 GPIO_ACTIVE_HIGH>;
+			interrupts-extended = <&gpioe 9 IRQ_TYPE_LEVEL_HIGH>;
 			status = "disabled";
 		};
 
@@ -582,7 +162,7 @@
 	phy-handle = <&ethphy>;
 	status = "okay";
 #if 0
-	phy-reset-gpios = GP_FEC_RESET;
+	phy-reset-gpios = <&gpiof 11 GPIO_ACTIVE_LOW>;
 #endif
 
 	mdio {
@@ -590,10 +170,149 @@
 		#size-cells = <0>;
 
 		ethphy: ethernet-phy@7 {
-			interrupts-extended = GPIRQ_FEC_PHY;
+			interrupts-extended = <&gpiof 10 IRQ_TYPE_LEVEL_LOW>;
 			reg = <7>;
 			micrel,led-mode = <1>;
 		};
+	};
+};
+
+&iomuxc1 {
+	pinctrl-0 = <&pinctrl_hog_som>, <&pinctrl_hog_carrier>;
+
+	pinctrl_fec: fecgrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTF8__ENET0_MDIO	0x43
+			MX8ULP_PAD_PTF9__ENET0_MDC	0x43
+			MX8ULP_PAD_PTF6__ENET0_CRS_DV	0x43
+			MX8ULP_PAD_PTF5__ENET0_RXER	0x43
+			MX8ULP_PAD_PTF1__ENET0_RXD0	0x43
+			MX8ULP_PAD_PTF0__ENET0_RXD1	0x43
+			MX8ULP_PAD_PTF4__ENET0_TXEN	0x43
+			MX8ULP_PAD_PTF3__ENET0_TXD0	0x43
+			MX8ULP_PAD_PTF2__ENET0_TXD1	0x43
+			MX8ULP_PAD_PTF7__ENET0_REFCLK	0x10043
+			MX8ULP_PAD_PTF11__PTF11		0x7
+			MX8ULP_PAD_PTF10__PTF10		0x7
+		>;
+	};
+
+	pinctrl_hog_carrier: hog-carriergrp {
+		fsl,pins = <
+			/* J6 */
+			MX8ULP_PAD_PTD15__PTD15		0x7
+			MX8ULP_PAD_PTD18__PTD18		0x7
+			MX8ULP_PAD_PTD19__PTD19		0x7
+			MX8ULP_PAD_PTD20__PTD20		0x7
+			MX8ULP_PAD_PTD23__PTD23		0x7
+			MX8ULP_PAD_PTE10__PTE10		0x7
+			MX8ULP_PAD_PTE23__PTE23		0x7
+			MX8ULP_PAD_PTF12__PTF12		0x7
+			MX8ULP_PAD_PTF13__PTF13		0x7
+			MX8ULP_PAD_PTF18__PTF18		0x7
+			MX8ULP_PAD_PTF19__PTF19		0x7
+			MX8ULP_PAD_PTF25__PTF25		0x7
+			/* M.2 */
+			MX8ULP_PAD_PTE11__PTE11		0x7
+			MX8ULP_PAD_PTE12__PTE12		0x7
+			MX8ULP_PAD_PTE13__PTE13		0x7
+			MX8ULP_PAD_PTE14__PTE14		0x7
+			MX8ULP_PAD_PTE15__PTE15		0x7
+			MX8ULP_PAD_PTE16__PTE16		0x7
+			MX8ULP_PAD_PTE17__PTE17		0x7
+			MX8ULP_PAD_PTE18__PTE18		0x7
+			MX8ULP_PAD_PTE19__PTE19		0x7
+			MX8ULP_PAD_PTE2__PTE2		0x7
+			MX8ULP_PAD_PTE3__PTE3		0x7
+			MX8ULP_PAD_PTE4__PTE4		0x7
+			MX8ULP_PAD_PTE5__PTE5		0x7
+			MX8ULP_PAD_PTF24__PTF24		0x7
+			MX8ULP_PAD_PTF28__PTF28		0x7
+		>;
+	};
+
+	/* CSI i2c bus*/
+	pinctrl_lpi2c7: lpi2c7grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTF20__LPI2C7_SCL	0x27
+			MX8ULP_PAD_PTF21__LPI2C7_SDA	0x27
+			MX8ULP_PAD_PTD16__PTD16		0x7
+			MX8ULP_PAD_PTD17__PTD17		0x7
+		>;
+	};
+
+	/* J11, M.2 connector */
+	pinctrl_lpuart4: lpuart4grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE18__LPUART4_TX	0x03
+			MX8ULP_PAD_PTE19__LPUART4_RX	0x03
+			MX8ULP_PAD_PTE16__LPUART4_CTS_B	0x03
+			MX8ULP_PAD_PTE17__LPUART4_RTS_B 0x03
+		>;
+	};
+
+	/* J9 connector */
+	pinctrl_lpuart7: lpuart7grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTF22__LPUART7_TX	0x03
+			MX8ULP_PAD_PTF23__LPUART7_RX	0x03
+		>;
+	};
+
+	pinctrl_sn65dsi83: sn65dsi83grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTF26__PTF26         0x02
+			MX8ULP_PAD_PTE9__PTE9		0x7
+		>;
+	};
+
+	pinctrl_reg_usbotg1_vbus: reg-usbotg1-vbusgrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTD13__PTD13		0x03
+		>;
+	};
+
+	pinctrl_reg_usbotg2_vbus: reg-usbotg2-vbusgrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTD21__PTD21		0x03
+		>;
+	};
+
+	pinctrl_tpm4: tpm4grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE8__TPM4_CH0	0x7
+		>;
+	};
+
+	pinctrl_ts_goodix: ts-goodixgrp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE22__PTE22		0x03
+			MX8ULP_PAD_PTE7__PTE7		0x02
+		>;
+	};
+
+	pinctrl_usbotg1: usbotg1grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTD14__USB0_OC	0x10003
+		>;
+	};
+
+	pinctrl_usbotg2: usbotg2grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTD22__USB1_OC	0x10003
+		>;
+	};
+
+	pinctrl_usdhc2: usdhc2grp {
+		fsl,pins = <
+			MX8ULP_PAD_PTE2__SDHC2_CLK	0x10042
+			MX8ULP_PAD_PTE3__SDHC2_CMD	0x43
+			MX8ULP_PAD_PTE1__SDHC2_D0	0x43
+			MX8ULP_PAD_PTE0__SDHC2_D1	0x43
+			MX8ULP_PAD_PTE5__SDHC2_D2	0x43
+			MX8ULP_PAD_PTE4__SDHC2_D3	0x43
+			MX8ULP_PAD_PTE12__SDHC2_RESET_B	0x43
+		>;
 	};
 };
 
@@ -603,9 +322,9 @@
 		reg = <0x5d>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_ts_goodix>;
-		interrupts-extended = GPIRQ_TS;
-		irq-gpios = GP_TS_IRQ;
-		reset-gpios = GP_TS_RESET;
+		interrupts-extended = <&gpioe 22 IRQ_TYPE_LEVEL_HIGH>;
+		irq-gpios = <&gpioe 22 GPIO_ACTIVE_HIGH>;
+		reset-gpios = <&gpioe 7 GPIO_ACTIVE_LOW>;
 		esd-recovery-timeout-ms = <2000>;
 		status = "disabled";
 	};
