--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -246,6 +246,7 @@ dtb-$(CONFIG_ARCH_MXC) += imx8mm-c2.dtb \
 			  imx8mm-geno.dtb \
 			  imx8mm-hl8mm.dtb \
 			  imx8mm-kea.dtb \
+			  imx8mp-mmr.dtb \
 			  imx8mm-moo.dtb \
 			  imx8mm-nitrogen8mm.dtb imx8mm-nitrogen8mm-m4.dtb \
 			  imx8mm-nitrogen8mm-tc358743.dtb \
