--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -516,3 +516,9 @@ imx95-19x19-evk-adv7535-it6263-lvds1-ap1302-dtbs := imx95-19x19-evk.dtb imx95-19
 						     imx95-19x19-evk-it6263-lvds1.dtbo \
 						     imx95-19x19-evk-ap1302.dtbo
 dtb-$(CONFIG_ARCH_MXC) += imx95-19x19-evk-adv7535-it6263-lvds1-ap1302.dtb
+
+imx95-19x19-evk-adv7535-ap1302-cs42888-dtbs := imx95-19x19-evk.dtb imx95-19x19-evk-adv7535.dtbo \
+											   imx95-19x19-evk-ap1302.dtbo \
+											   imx95-19x19-evk-cs42888.dtbo
+
+dtb-$(CONFIG_ARCH_MXC) += imx95-19x19-evk-adv7535-ap1302-cs42888.dtb
