MA-22292 defconfig: Enable wm8904 codec driver
Build in wm8904 codec driver.

Change-Id: Ie09413ce171e3ed79d5448d24f3363db9edbe3b5
Signed-off-by: Jindong Yue <jindong.yue@nxp.com>

--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -350,6 +350,7 @@ CONFIG_SND_SOC_SOF_OF=y
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_TPA6130A2=y
 CONFIG_SND_SOC_WM8524=y
+CONFIG_SND_SOC_WM8904=y
 CONFIG_SND_SOC_WM8960=y
 CONFIG_SND_SOC_WM8962=y
 CONFIG_SOC_IMX8M=y
