MA-22296 defconfig: Enable formatter driver for imx95
Set CONFIG_VIDEO_IMX_CSI_FORMATTER=y to enable csi pixel formatter
driver for imx95.

Change-Id: I4710504ae8117701ac6bcd2d9fcc6c87b6124453
Signed-off-by: Zhipeng Wang <zhipeng.wang_1@nxp.com>

--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -399,6 +399,7 @@ CONFIG_VIDEO_IMX8_ISI=y
 CONFIG_VIDEO_IMX8_ISI_M2M=y
 CONFIG_VIDEO_IMX8_JPEG=y
 CONFIG_VIDEO_IMX_CAPTURE=y
+CONFIG_VIDEO_IMX_CSI_FORMATTER=y
 CONFIG_VIDEO_MX8_CAPTURE=y
 CONFIG_VIDEO_MXC_CAPTURE=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=y
