LF-12849-1: dt-bindings: phy: Add compatible string for i.MX95 standalone MIPI DPHY-RX
Add dt-bindings compatible string for the standalone MIPI DPHY-RX driver
found in i.MX95 SoC.

Signed-off-by: Robert Chiras <robert.chiras@nxp.com>
Reviewed-by: Laurentiu Palcu <laurentiu.palcu@oss.nxp.com>
Reviewed-by: Mirela Rabulea <mirela.rabulea@nxp.com>

--- a/Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.yaml
+++ b/Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.yaml
@@ -11,7 +11,10 @@ maintainers:
 
 properties:
   compatible:
-    const: fsl,imx93-mipi-dphy
+    items:
+      - enum:
+        - fsl,imx93-mipi-dphy
+        - fsl,imx95-dphy-rx
 
   "#phy-cells":
     const: 0
@@ -36,6 +39,12 @@ properties:
     maxItems: 1
 
   assigned-clock-rates:
+    maxItems: 1
+
+  fsl,csis:
+    description:
+      Must be the device tree identifier of the CSI memory map. This is required only
+      for the i.MX95 CSI standalone dphy-rx driver.
     maxItems: 1
 
 required:
