LF-12866-1: arm64: dts: imx95: Add clk name for vpu node
Add clk name for vpu device node, then driver can get the clk rate
according to the name

Signed-off-by: Ming Qian <ming.qian@nxp.com>
Reviewed-by: TaoJiang <tao.jiang_2@nxp.com>

--- a/arch/arm64/boot/dts/freescale/imx95.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx95.dtsi
@@ -2960,6 +2960,7 @@
 			interrupts = <GIC_SPI 299 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&scmi_clk IMX95_CLK_VPU>,
 				 <&vpu_blk_ctrl IMX95_CLK_VPUBLK_WAVE>;
+			clock-names = "vpu", "vpublk_wave";
 			power-domains = <&scmi_devpd IMX95_PD_VPU>;
 			cnm,ctrl = <&vpuctrl>;
 		};
@@ -2970,6 +2971,7 @@
 			interrupts = <GIC_SPI 300 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&scmi_clk IMX95_CLK_VPU>,
 				 <&vpu_blk_ctrl IMX95_CLK_VPUBLK_WAVE>;
+			clock-names = "vpu", "vpublk_wave";
 			power-domains = <&scmi_devpd IMX95_PD_VPU>;
 			cnm,ctrl = <&vpuctrl>;
 			status = "disabled";
@@ -2981,6 +2983,7 @@
 			interrupts = <GIC_SPI 301 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&scmi_clk IMX95_CLK_VPU>,
 				 <&vpu_blk_ctrl IMX95_CLK_VPUBLK_WAVE>;
+			clock-names = "vpu", "vpublk_wave";
 			power-domains = <&scmi_devpd IMX95_PD_VPU>;
 			cnm,ctrl = <&vpuctrl>;
 			status = "disabled";
@@ -2992,6 +2995,7 @@
 			interrupts = <GIC_SPI 302 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&scmi_clk IMX95_CLK_VPU>,
 				 <&vpu_blk_ctrl IMX95_CLK_VPUBLK_WAVE>;
+			clock-names = "vpu", "vpublk_wave";
 			power-domains = <&scmi_devpd IMX95_PD_VPU>;
 			cnm,ctrl = <&vpuctrl>;
 			status = "disabled";
