LF-12849-2: dt-bindings: phy: Add compatible string for i.MX95 combo MIPI DPHY-RX/TX
Add dt-bindings compatible string for the combo MIPI DPHY-RX/TX driver
found in i.MX95 SoC. This driver handles only the RX part of the phy.

Signed-off-by: Robert Chiras <robert.chiras@nxp.com>
Reviewed-by: Laurentiu Palcu <laurentiu.palcu@oss.nxp.com>
Reviewed-by: Mirela Rabulea <mirela.rabulea@nxp.com>

--- a/Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.yaml
+++ b/Documentation/devicetree/bindings/phy/fsl,imx93-mipi-dphy.yaml
@@ -15,6 +15,7 @@ properties:
       - enum:
         - fsl,imx93-mipi-dphy
         - fsl,imx95-dphy-rx
+        - fsl,imx95-combo-rx
 
   "#phy-cells":
     const: 0
@@ -45,6 +46,18 @@ properties:
     description:
       Must be the device tree identifier of the CSI memory map. This is required only
       for the i.MX95 CSI standalone dphy-rx driver.
+    maxItems: 1
+
+  fsl,reg-offset:
+    description:
+      Register offset, in hex, in the register map, where the driver can access its
+      relevant registers.
+    maxItems: 1
+
+  fsl,dsi:
+    description:
+      Must be the device tree identifier of the DSI memory map. This is required only
+      for the CSI/DSI combo driver, where CSI shares the same combo phy with the DSI.
     maxItems: 1
 
 required:
