arm: dts: mt8188: add disp_pwm1 node
On G700 EVK p1v4, the startek-kd070fhfid078 DSI panel is used, which
utilizes disp_pwm1 to supply the backlight.

As disp_pwm1 is a part of the SOC design, the node is added in the
mt8188 dts.

Change-Id: I475cc66f0eaa2c719d8b3c8682f52ba7e2bb2a7c
Signed-off-by: Tommy Chen <tommyyl.chen@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt8188.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8188.dtsi
@@ -1119,6 +1119,18 @@
 			status = "disabled";
 		};
 
+		disp_pwm1: disp-pwm0@1100f000 {
+			compatible = "mediatek,mt8183-disp-pwm";
+			reg = <0 0x1100f000 0 0x1000>;
+			interrupts = <GIC_SPI 793 IRQ_TYPE_LEVEL_LOW 0>;
+			power-domains = <&spm MT8188_POWER_DOMAIN_VDOSYS0>;
+			#pwm-cells = <2>;
+			clocks = <&topckgen CLK_TOP_DISP_PWM1>,
+				 <&infracfg_ao CLK_INFRA_AO_DISP_PWM1>;
+			clock-names = "main", "mm";
+			status = "disabled";
+		};
+
 		spi1: spi1@11010000 {
 			compatible = "mediatek,mt6765-spi";
 			reg = <0 0x11010000 0 0x1000>;
