GENIO: arm64: dts: mediatek: genio-700-evk: modify gpio 111 to be regulator-gpio
On G510 EVK, the startek-kd070fhfid078 (abbreviated as kd-078) utilizes
GPIO 111 as a gpio-regulator. However, on legacy G700 EVK, the
startek-kd070fhfid015 (abbreviated as kd-015) uses GPIO pin 111 as an
enable-gpio.

On the latest G700 EVK p1v4, kd-078 is used instead. As dtbo could not
modify the GPIO propertiy, to ensure compatibility of the G700 EVK dts
with both kd-015 and kd-078, GPIO 111 is adjusted to function as a
common gpio-regulator.

Change-Id: Ie0640edb186cbe300aae93c40b3b6f771d85459c
Signed-off-by: Tommy Chen <tommyyl.chen@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/genio-700-evk.dts
+++ b/arch/arm64/boot/dts/mediatek/genio-700-evk.dts
@@ -217,6 +217,15 @@
 		regulator-always-on;
 	};
 
+	dsi0_en: dsi0-en {
+		compatible = "regulator-fixed";
+		regulator-name = "lcm1_en";
+		enable-active-high;
+		gpio = <&pio 111 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&dsi0_en_pins_default>;
+	};
+
 	amic_codec: amic-codec {
 		#sound-dai-cells = <0>;
 		compatible = "dmic-codec";
@@ -406,7 +415,7 @@
 		pinctrl-0 = <&panel_pins_default>;
 		reset-gpios = <&pio 25 GPIO_ACTIVE_HIGH>;
 		dcdc-gpios = <&pio 45 GPIO_ACTIVE_HIGH>;
-		enable-gpios = <&pio 111 GPIO_ACTIVE_HIGH>;
+		iovcc-supply = <&dsi0_en>;
 		port {
 			panel0_in: endpoint {
 				remote-endpoint = <&dsi0_out>;
@@ -640,14 +649,16 @@
 			output-low;
 		};
 
-		panel-en {
-			pinmux = <PINMUX_GPIO111__FUNC_B_GPIO111>;
-			output-low;
-		};
-
 		panel-rst {
 			pinmux = <PINMUX_GPIO25__FUNC_B_GPIO25>;
 			output-high;
+		};
+	};
+
+	dsi0_en_pins_default: dsi0-en-pins-default {
+		panel-en {
+			pinmux = <PINMUX_GPIO111__FUNC_B_GPIO111>;
+			output-low;
 		};
 	};
 
