MA-22663 defconfig: Change CONFIG_VIDEO_OS08A20 to CONFIG_VIDEO_OX05B1S
The os08a20 is now supported in the ox05b1s driver.

Change-Id: I4e2cdae0eca93bccc678d2610229f3536cb6ca58
Signed-off-by: Zhipeng Wang <zhipeng.wang_1@nxp.com>

--- a/arch/arm64/configs/imx_v8_android_defconfig
+++ b/arch/arm64/configs/imx_v8_android_defconfig
@@ -405,7 +405,7 @@ CONFIG_VIDEO_MX8_CAPTURE=y
 CONFIG_VIDEO_MXC_CAPTURE=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=y
 CONFIG_VIDEO_NXP_NEOISP=y
-CONFIG_VIDEO_OS08A20=y
+CONFIG_VIDEO_OX05B1S=y
 CONFIG_VIDEO_OV5640=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VT=y
