HACK: arm64: dts: mediatek: ethernet
Set ethernet's power supply to always-on.
TODO: Do this properly in the meta-mediatek-bsp Yocto layer
      into "recipes-kernel/dtbo/v6/mt8365-evk/net-ethernet.dts"

Signed-off-by: Alexandre Mergnat <amergnat@baylibre.com>

--- a/arch/arm64/boot/dts/mediatek/mt8365-evk.dts
+++ b/arch/arm64/boot/dts/mediatek/mt8365-evk.dts
@@ -412,9 +412,17 @@
 	};
 };
 
+&mt6357_vibr_reg {
+	regulator-always-on;
+};
+
 &mt6357_vsim1_reg {
 	regulator-min-microvolt = <1800000>;
 	regulator-max-microvolt = <1800000>;
+};
+
+&mt6357_vsim2_reg {
+	regulator-always-on;
 };
 
 &pio {
